# chechen-power-notify-bot

./: .env.example  .gitignore  PROJECT_SPEC.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  config.py  domain.py  main.py
app/bot/: commands.py  handlers.py  keyboards.py  states.py
app/db/: models.py  repositories.py  session.py
app/jobs/: scheduler.py
app/matching/: __init__.py  address.py  matcher.py
app/services/: container.py  messages.py  sync.py
app/sources/: __init__.py  chechenenergo.py
app/utils/: text.py
deploy/: chechen-power-notify.service  deploy.sh  ubuntu-24.04.md
scripts/: backup_postgres.sh
tests/unit/: test_matching.py  test_normalization.py  test_source_parser.py
