[project]
name = "chechen-power-notify"
version = "0.1.0"
description = "Telegram bot for planned power outage notifications in Chechnya."
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4",
    "alembic>=1.13,<2",
    "apscheduler>=3.10,<4",
    "asyncpg>=0.29,<1",
    "beautifulsoup4>=4.12,<5",
    "httpx>=0.27,<1",
    "lxml>=5.2,<6",
    "pydantic-settings>=2.4,<3",
    "SQLAlchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-httpx>=0.30,<1",
    "ruff>=0.6,<1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
